fix: align

--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -3704,8 +3704,7 @@
             }
 
             .name {
-                width: 100%;
-                max-width: 600px;
+                flex: 1;
                 /*width: 200px;
                 display: -webkit-box;
                 overflow: hidden;
